appdeploy.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app
    role: tenanttwonamespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        role: tenanttwonamespace
    spec:
      containers:
        - name: app
          image: CONTAINER_IMAGE
          resources:
            requests:
              cpu: 200m
              memory: 0.5Gi
            limits:
              cpu: 400m
              memory: 1Gi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-8e5f37c6,subnet-d52d9ef9
  labels:
    app: app
    role: tenanttwonamespace
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: app
              servicePort: 80
